@@ -16,3 +16,4 @@ Deprecated Functions:
 *********************
 (UnstructuredMeshInspectionTools.py) VolumeOfHexaedrons -> use GetVolumePerElement
 (UnstructuredMeshInspectionTools.py) VolumeOfTetrahedrons -> use GetVolumePerElement
+(UnstructuredMeshInspectionTools.py) ExtractElementsByImplicitZone -> use ExtractElementsByElementFilter, CleanLonelyNodes
